Fix scrolling cursor style bug on small screens.

--- a/simple-gallery/src/index.css
+++ b/simple-gallery/src/index.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+
+@layer base {
+  html {
+    height: 100%;
+  }
+  /* Aggressive cursor hiding */
+  * {
+    cursor: none !important;
+  }
+}
